more tests completed

--- a/tests/addCss.html
+++ b/tests/addCss.html
@@ -5,7 +5,14 @@
         <script src="../src/makeBelieve.js"></script>
     </head>
     <body>
-        <!--Test go here-->
+        <div class="test">
+
+        </div>
+        <script>
+            __('.test').css('background-color', 'red');
+            __('.test').css('height', '500px')
+            __('.test').css('width', '500px')
+        </script>
     </body>
 </html> 
 
