--- a/tests/deleteElement.html
+++ b/tests/deleteElement.html
@@ -6,6 +6,18 @@
     </head>
     <body>
         <!--Test go here-->
+        <div>
+            <p class="stay">1</p>
+            <p class="stay">2</p>
+            <p class="remove">3</p>
+            <p class="stay">4</p>
+            <p class="remove">5</p>
+            <p class="stay">6</p>
+        </div>
+
+        <script>
+            __('.remove').delete()
+        </script>
     </body>
 </html> 
 
