--- a/tests/prepentHtml.html
+++ b/tests/prepentHtml.html
@@ -5,7 +5,27 @@
         <script src="../src/makeBelieve.js"></script>
     </head>
     <body>
-        <!--Test go here-->
+        // Before
+            <div class="the-prepender">
+                <h2>I am the prepender!</h2>
+            </div>
+
+            <script>
+                __('.the-prepender').prepend('<p>I am an prepended paragraph!</p>');
+                __('.the-prepender').prepend(
+                    document.createElement('p')
+                        .appendChild(
+                            document.createTextNode('I am an prepended paragraph!')
+                        )
+                );
+            </script>
+
+            // After
+            <div class="the-prepender">
+                <p>I am an prepended paragraph!</p>
+                <p>I am an prepended paragraph!</p>
+                <h2>I am the prepender!</h2>
+            </div>
     </body>
 </html> 
 
