--- a/tests/ancestor.html
+++ b/tests/ancestor.html
@@ -23,6 +23,7 @@
         <script>
             // Returns the div with the class .ancestor
             var ancestor = __('#password').ancestor('.ancestor');
+            var falsePositive = __('#password').parent('.grandfather')
             // Returns the div with the class .root
             var rootElem = __('#password').ancestor('.root');
             // Returns an empty object
