tests from halldor

--- a/tests/insertText.html
+++ b/tests/insertText.html
@@ -6,7 +6,10 @@
     </head>
     <body>
         <!--Test go here-->
+        <h1> Test 123 </h1>
+
+        <script>
+        __('h1').insertText('Test : passed');
+        </script>
     </body>
-</html> 
-
-
+</html>
