--- a/tests/toggleClass.html
+++ b/tests/toggleClass.html
@@ -3,10 +3,16 @@
     <head>
         <title>Testing</title>
         <script src="../src/makeBelieve.js"></script>
+        <style>
+        .red { background-color: red };
+        </style>
     </head>
     <body>
         <!--Test go here-->
+        <h1 class='red'> Test </h1>
+        <h1> Test </h1>
+        <script >
+          __('h1').toggleClass('red');
+        </script>
     </body>
-</html> 
-
-
+</html>
